[build-system]
requires 		= ["setuptools>=61.0.0", "wheel"]
build-backend	= "setuptools.build_meta"

[project]
name = "stem_mixer"
description = "Data augmentation for source separation models"
dynamic = ["readme"]
version = "0.1.0"
authors = [
	{name = "Giovana Morais", email = "giovana.morais@nyu.edu"},
	{name = "Lindsey Pietrewicz", email = "lgp3212@nyu.edu"},
]
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]
dependencies = [
	"librosa >= 0.10.2",
	"pandas >= 2.2.2",
	"soundfile >= 0.12.1"
]
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = {attr = "stem_mixer.VERSION"}
readme = {file = ["README.md"]}

[project.optional-dependencies]
docs = ["sphinx"]
dev = ["pip-tools", "pytest", "ruff"]

[project.urls]
Documentation = "https://giovana-morais.github.io/stem_mixer"
