[metadata]
name = stem_mixer
version = 0.1.0
description = data generation for source separation models
long_description = file:README
long_description_content_type = text/markdown; charset=UTF-8
author = Giovana Morais and Lindsey Pietrewicz
author_email = giovana.morais@nyu.edu and lgp3212@nyu.edu
url = https://github.com/giovana-morais/stem_mixer

[classifiers]
	Programming Language :: Python :: 3


[options]
python_requires = >=3.10
install_requires =
	librosa >= 0.10.2
	soundfile >= 0.12.1
